------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Tue May 06 16:39 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Minor fix to lp driver.

Fri Apr 16 09:57 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added support for the signal(2) system call, and support
	  for signal handler functions.

Thu Feb 25 21:13 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed typo for read_only option.

Tue Feb 16 12:34 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final tweaks for 0.0.75

Mon Feb 15 17:08 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Driver stub of meta driver for user space device drivers

Mon Feb 15 17:06 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Latest tweaks to serial driver by Blaz Antonic

Mon Feb 15 16:56 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
	
	* Added alpha code for shared libraries.

Mon Feb 15 16:47 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Commented mm diagnostic functions.

Fri Feb 12 16:35 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Trimmed block request code.

Sun Jan 31 17:50 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix main.c so init is launched with a valid set of argvs.

	* Fix ntty.c so tty driver ioctls are called.

Sat Dec 06 00:24 GMT 1998   Alastair Bridgewater  <nyef@softhome.net>

	* Fixed arch/i86/lib/Makefile to rebuild setup[bw].s when nessecary.

Wed Thu 03 17:12 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Tweaked docs for 0.0.74

Wed Thu 03 17:12 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Debugged minix filesystem, so that removing files now
	  works correctly, and the filesystem no longer gets corrupted.
