@@ -4,6 +4,11 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Tue May 06 17:19 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Fixed select code, including modifications to scheduler
+	  to fix timers.
+
 Tue May 06 16:39 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Minor fix to lp driver.
